apollo-router/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apollo-router
  name: apollo-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apollo-router
  template:
    metadata:
      labels:
        app: apollo-router
    spec:
      containers:
      - image: lmctague/apollo-router:8665318884a4f7919ab45734fdb87cd7213a0626
        name: apollo-router
        ports:
        - name: http
          containerPort: 80
        - name: health-check
          containerPort: 8088
        #livenessProbe:
        #  httpGet:
        #    path: "/health"
        #    port: health-check
        #readinessProbe:
        #  httpGet:
        #    path: "/health"
        #    port: health-check
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: supergraph-config
          mountPath: /apollo-router/schema
        - name: router-config
          mountPath: /apollo-router/config
      volumes:
      - name: supergraph-config
        configMap:
          name: supergraph-config
      - name: router-config
        configMap:
          name: router-config
